[package]
name = "hazptr"
description = "hazard pointer based concurrent memory reclamation"
version = "0.2.0"
authors = ["Oliver Giersch"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/oliver-giersch/hazptr.git"
documentation = "https://docs.rs/hazptr"
keywords = ["hazard", "pointer", "concurrent", "reclamation", "lock-free"]
edition = "2018"
exclude = [".travis.yml", "ci/*", "DEBUG.md"]

[features]
default = ["std"]

# disable for use in no_std crates (for limitations see README.md)
std = ["arrayvec/std", "conquer-once/std", "reclaim/std"]

# counting towards the scan threshold caused by dropping hazard pointer guards
count-release = []

# for instrumentation with TSAN
sanitize-threads = []

[dependencies]
cfg-if = "0.1.7"

[dependencies.arrayvec]
version = "0.4.11"
default-features = false

[dependencies.conquer-once]
version = "0.1.2"
default-features = false

[dependencies.reclaim]
version = "0.2.2"
default-features = false

[dev-dependencies]
matches = "0.1.8"
rand = "0.6.5"

[[example]]
name = "hash_set"
required-features = ["std"]

[[example]]
name = "treiber"
required-features = ["std"]

[[test]]
name = "integration"
required-features = ["std", "count-release"]
