[package]
name = "hazptr"
description = "hazard pointer based concurrent memory reclamation"
version = "0.2.0"
authors = ["Oliver Giersch"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/oliver-giersch/hazptr.git"
documentation = "https://docs.rs/hazptr"
keywords = ["hazard", "pointer", "concurrent", "reclamation", "lock-free"]
edition = "2018"
exclude = [".travis.yml", "ci/*", "DEBUG.md"]

[features]
default = ["std"]

std = ["arrayvec/std", "conquer-once/std", "conquer-reclaim/std"]

[dependencies]
cfg-if = "0.1.10"

[dependencies.arrayvec]
version = "0.5.1"
default-features = false

[dependencies.conquer-once]
version = "0.2.0"
default-features = false

[dependencies.conquer-reclaim]
git = "https://github.com/oliver-giersch/conquer-reclaim"
branch = "api_revision"
default-features = false

[dependencies.conquer-util]
# version = "0.2.0"
git = "https://github.com/oliver-giersch/conquer-util"
default-features = false
features = ["align"]

[[example]]
name = "hash_set"
required-features = ["std"]

[[example]]
name = "treiber"
required-features = ["std"]

[[test]]
name = "integration"
required-features = ["std", "count-release"]
